[add] type=library

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "benjaminhu/oauth2-tsheets",
     "description": "TSheets by QuickBooks OAuth 2.0 Client Provider for The PHP League OAuth2-Client",
+    "type": "library",
     "keywords": [
         "oauth",
         "oauth2",
